# mengkeat.github.io

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MIGRATION.md  QUICKSTART.md  README.md  astro.config.mjs  build.py  dev_server.py  package-lock.json  package.json  pyproject.toml  tailwind.config.mjs
.github/workflows/: deploy.yml  noop.yml
content/til/: typescript-satisfies.md
docs/: index.html
scripts/: copy-dist.js
src/components/: ContentCard.astro  KaTeX.astro  TagCloud.astro
src/content/: config.ts
src/content/blog/: mathematical-notation-web.md
src/content/til/: css-has-selector.md  git-worktree.md  python-walrus-operator.md
src/layouts/: BaseLayout.astro  BlogPost.astro  TILPost.astro
src/lib/: tags.ts  utils.ts
src/pages/: index.astro  tags.astro  til.astro
src/pages/blog/: [slug].astro  index.astro  mathematical-notation-web.astro
src/pages/tags/: [tag].astro
src/pages/til/: [slug].astro
src/styles/: global.css
templates/: base.html  blog_index.html  index.html  notes_index.html  post.html  tag.html  tags.html  til_index.html
